--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="string_mot_de_passe">Mot de passe</string>
+    <string name="string_user">Nom d\'utilisateur</string>
 
 </resources>
