--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,26 @@
 <resources>
 
-    <string name="app_name">CheerUp!</string>
+    <string name="app_name">Cheer Up!</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="string_mot_de_passe">Mot de passe</string>
     <string name="string_user">Nom d\'utilisateur</string>
-    <string name="title_activity_menu_lateral">menu_lateral</string>
+    <string name="title_activity_menu_lateral">Cheer Up!</string>
 
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Home</string>
+    <string name="title_section2">Ajouter patient</string>
+    <string name="title_section3">Chercher patient</string>
+    <string name="title_section4">Créer compte-rendu</string>
+
+    <string name="title_home">HOME</string>
+    <string name="title_chercher_patient">CHERCHER PATIENT</string>
+    <string name="title_creer_compte_rendu">CREER COMPTE RENDU</string>
+    <string name="title_ajouter_patient">AJOUTER PATIENT</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
-    <string name="action_example">Example action</string>
+    <string name="action_example">Exemple</string>
 
 </resources>
